<resources>
    <plurals name="offline_notification_count">
        <item quantity="one">You have 1 offline product waiting to be contributed to Application of food products</item>
        <item quantity="other">You have %d offline products waiting to be contributed to Application of food products</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">1 second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="action_about">About</string>
    <string name="action_discover">Discover</string>
    <string name="contribute">How to contribute</string>
    <string name="action_find">Find</string>
    <string name="product_incomplete_message">The ingredient list of this product is not complete. As a result, the allergen alert is not shown.</string>
    <string name="product_allergen_prompt">This product contains:</string>
    <string name="no_offline_data">You\'re all done</string>
    <string name="first_offline">Products added offline will appear here</string>
    <string-array name="upload_image" translatable="false">
        <item>640 X 480</item>
        <item>1024 X 768</item>
        <item>1152 X 864</item>
        <item>1600 X 1200</item>
    </string-array>
    <string-array name="nav_drawer_items_product">
        <item>Summary</item>
        <item>Ingredients</item>
        <item>Nutrition</item>
        <item>Nutrition Table</item>
        <item>Environment</item>
    </string-array>
    <string-array name="nav_drawer_new_items_product">
        <item>Product Photos</item>
        <item>Ingredient Analysis</item>
    </string-array>
    <string-array name="weights_array" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>kg</item>
        <item>l</item>
        <item>cl</item>
    </string-array>
    <string-array name="energy_units" translatable="false">
        <item>kcal</item>
        <item>kJ</item>
    </string-array>
    <string-array name="volume_units" translatable="false">
        <item>l</item>
        <item>oz</item>
    </string-array>
    <string-array name="nutrition_weight_units" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
    </string-array>
    <string-array name="nutrition_serving_weight_units" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
        <item>l</item>
        <item>ml</item>
    </string-array>
    <string-array name="weight_all_units">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
        <item>% DV</item>
        <item>IU</item>
    </string-array>
    <string-array name="nutrients_array">
        <item>Alpha-linolenic acid / ALA (18:3 n-3)</item>
        <item>Arachidic acid (20:0)</item>
        <item>Arachidonic acid / AA / ARA (20:4 n-6)</item>
        <item>Behenic acid (22:0)</item>
        <item>Bicarbonate</item>
        <item>Biotin</item>
        <item>Butyric acid (4:0)</item>
        <item>Caffeine</item>
        <item>Calcium</item>
        <item>Capric acid (10:0)</item>
        <item>Caproic acid (6:0)</item>
        <item>Caprylic acid (8:0)</item>
        <item>Casein</item>
        <item>Cerotic acid (26:0)</item>
        <item>Chloride</item>
        <item>Cholesterol</item>
        <item>Chromium</item>
        <item>Copper</item>
        <item>Dihomo-gamma-linolenic acid / DGLA (20:3 n-6)</item>
        <item>Docosahexaenoic acid / DHA (22:6 n-3)</item>
        <item>Eicosapentaenoic acid / EPA (20:5 n-3)</item>
        <item>Elaidic acid (18:1 n-9)</item>
        <item>Erucic acid (22:1 n-9)</item>
        <item>Fluoride</item>
        <item>Fructose</item>
        <item>Gamma-linolenic acid / GLA (18:3 n-6)</item>
        <item>Glucose</item>
        <item>Gondoic acid (20:1 n-9)</item>
        <item>Iodine</item>
        <item>Iron</item>
        <item>Lactose</item>
        <item>Lauric acid (12:0)</item>
        <item>Lignoceric acid (24:0)</item>
        <item>Linoleic acid / LA (18:2 n-6)</item>
        <item>Magnesium</item>
        <item>Maltodextrins</item>
        <item>Maltose</item>
        <item>Manganese</item>
        <item>Mead acid (20:3 n-9)</item>
        <item>Melissic acid (30:0)</item>
        <item>Molybdenum</item>
        <item>Monounsaturated fat</item>
        <item>Montanic acid (28:0)</item>
        <item>Myristic acid (14:0)</item>
        <item>Nervonic acid (24:1 n-9)</item>
        <item>Nucleotides</item>
        <item>Oleic acid (18:1 n-9)</item>
        <item>Omega 3 fatty acids</item>
        <item>Omega 6 fatty acids</item>
        <item>Omega 9 fatty acids</item>
        <item>Palmitic acid (16:0)</item>
        <item>Pantothenic acid / Pantothenate (Vitamin B5)</item>
        <item>pH</item>
        <item>Phosphorus</item>
        <item>Sugar alcohols (Polyols)</item>
        <item>Polyunsaturated fat</item>
        <item>Potassium</item>
        <item>Selenium</item>
        <item>Serum proteins</item>
        <item>Silica</item>
        <item>Starch</item>
        <item>Stearic acid (18:0)</item>
        <item>Sucrose</item>
        <item>Taurine</item>
        <item>Trans fat</item>
        <item>Vitamin A</item>
        <item>Vitamin B1 (Thiamin)</item>
        <item>Vitamin B12 (Cobalamin)</item>
        <item>Vitamin B2 (Riboflavin)</item>
        <item>Vitamin B3 / Vitamin PP (Niacin)</item>
        <item>Vitamin B6 (Pyridoxin)</item>
        <item>Vitamin B9 (Folic acid)</item>
        <item>Vitamin C (Ascorbic acid)</item>
        <item>Vitamin D</item>
        <item>Vitamin E</item>
        <item>Vitamin K</item>
        <item>Zinc</item>
    </string-array>
    <string-array name="languages_array" translatable="false">
        <item>ar</item>
        <item>en</item>

    </string-array>
    <string-array name="product_images_fields_array" translatable="false">
        <item>product_name</item>
        <item>generic_name</item>
        <item>code</item>
        <item>lang</item>
        <item>image_small_url</item>
        <item>images</item>
        <item>image_front_url</item>
        <item>image_ingredients_url</item>
        <item>image_nutrition_url</item>
        <item>image_url</item>
        <item>selected_images</item>
    </string-array>
    <string-array name="product_all_fields_array" translatable="false">
        <item>product_name</item>
        <item>generic_name</item>
        <item>image_small_url</item>
        <item>image_front_url</item>
        <item>image_ingredients_url</item>
        <item>image_nutrition_url</item>
        <item>image_url</item>
        <item>selected_images</item>
        <item>languages_codes</item>
        <item>vitamins_tags</item>
        <item>minerals_tags</item>
        <item>amino_acids_tags</item>
        <item>other_nutritional_substances_tags</item>
        <item>url</item>
        <item>code</item>
        <item>traces_tags</item>
        <item>ingredients_that_may_be_from_palm_oil_tags</item>
        <item>additives_tags</item>
        <item>allergens_hierarchy</item>
        <item>manufacturing_places</item>
        <item>nutriments</item>
        <item>ingredients_from_palm_oil_tags</item>
        <item>brands_tags</item>
        <item>traces</item>
        <item>categories_tags</item>
        <item>ingredients_text</item>
        <item>ingredients_from_or_that_may_be_from_palm_oil_n</item>
        <item>serving_size</item>
        <item>allergens_tags</item>
        <item>allergens</item>
        <item>origins</item>
        <item>stores</item>
        <item>nutrition_grade_fr</item>
        <item>nutrient_levels</item>
        <item>countries</item>
        <item>countries_tags</item>
        <item>brands</item>
        <item>packaging</item>
        <item>labels_tags</item>
        <item>labels_hierarchy</item>
        <item>cities_tags</item>
        <item>quantity</item>
        <item>ingredients_from_palm_oil_n</item>
        <item>link</item>
        <item>emb_codes_tags</item>
        <item>states_tags</item>
        <item>creator</item>
        <item>created_t</item>
        <item>last_modified_t</item>
        <item>last_modified_by</item>
        <item>editors_tags</item>
        <item>nova_groups</item>
        <item>lang</item>
        <item>purchase_places</item>
        <item>nutrition_data_per</item>
        <item>no_nutrition_data</item>
        <item>other</item>
        <item>other_information</item>
        <item>conservation_conditions</item>
        <item>recycling_instructions_to_discard</item>
        <item>recycling_instructions_to_recycle</item>
        <item>warning</item>
        <item>customer_service</item>
        <item>environment_infocard</item>
        <item>environment_impact_level_tags</item>
    </string-array>
    <string-array name="fields_array" translatable="false">
        <item>product_name</item>
        <item>generic_name</item>
        <item>ingredients_text</item>
        <item>other_information</item>
        <item>conservation_conditions</item>
        <item>recycling_instructions_to_discard</item>
        <item>recycling_instructions_to_recycle</item>
        <item>warning</item>
        <item>customer_service</item>
        <item>image_front_url</item>
        <item>image_ingredients_url</item>
        <item>image_nutrition_url</item>
    </string-array>
    <string name="search_button">Search</string>
    <string name="alert_dialog_warning_title">Warning</string>
    <string name="alert_dialog_warning_msg_user">User/password has changed, please update information</string>
    <string name="toast_retrieving">Loading…</string>
    <string name="txtBarcode">Barcode :</string>
    <string name="txtCategories">Categories :</string>
    <string name="txtLabels">Labels, certifications, awards :</string>
    <string name="txtEMB">EMB Code:</string>
    <string name="txtIngredients">Ingredients list :</string>
    <string name="Donate">Donate</string>
    <string name="Donation">Click here to donate to Application of food products</string>
    <string name="txtSubstances">Substances or products causing allergies or intolerances :</string>
    <string name="txtAdditives">Additives :</string>
    <string name="txtTraces">Traces :</string>
    <string name="txtMayBeFromPalmOilProduct">Ingredients that may be from palm oil :</string>
    <string name="prefs_language">Language</string>
    <string name="prefs_language_summary">Change language</string>
    <string name="choose_energy_unit">Choose your preferred energy units for the nutrition table</string>
    <string name="energy_pref_title">Preferred energy unit</string>
    <string name="choose_volume_unit">Choose your preferred volume units for the nutrition table</string>
    <string name="volume_pref_title">Preferred volume unit</string>
    <string name="contact">Contact</string>
    <string name="contact_summary">Contact the team</string>
    <string name="preference_choose_language_dialog_title">Choose language</string>
    <string name="FAQ">FAQ</string>
    <string name="FrequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="Terms">Terms</string>
    <string name="TermsOfUse">Terms and Privacy</string>
    <string name="preference_header_general">General</string>
    <string name="preference_header_about" translatable="false">@string/action_about</string>
    <string name="Rate_Us">Show Your Support</string>
    <string name="Rate_Us_title">Rate our App</string>
    <string name="version">Version</string>
</resources>